--- a/index.html
+++ b/index.html
@@ -937,7 +937,7 @@
     
     <footer>
         <div class="container">
-            <p>جميع الحقوق محفوظة &copy; 2025  منيرة العيسى  </p>
+            <p> &copy; جميع الحقوق محفوظة  2025  منيرة العيسى  </p>
         </div>
     </footer>
 </body>
