--- a/lesson3.html
+++ b/lesson3.html
@@ -441,7 +441,7 @@
     
     <footer>
         <div class="container">
-            <p>جميع الحقوق محفوظة &copy; 2025 - منيرة العيسى - المنهج التدريسي: الركائز الأساسية لنجاح رواد الأعمال والشركات التقنية الناشئة</p>
+           <p> &copy; جميع الحقوق محفوظة  2025  منيرة العيسى  </p>
             <a href="index.html" class="btn">العودة إلى الصفحة الرئيسية</a>
         </div>
     </footer>
