--- a/lesson6.html
+++ b/lesson6.html
@@ -343,7 +343,7 @@
     
     <footer>
         <div class="container">
-            <p>جميع الحقوق محفوظة &copy; 2025 - منيرة العيسى</p>
+           <p> &copy; جميع الحقوق محفوظة  2025  منيرة العيسى  </p>
             <a href="index.html" class="btn">العودة إلى الصفحة الرئيسية</a>
         </div>
     </footer>
