--- a/lesson8.html
+++ b/lesson8.html
@@ -1034,7 +1034,7 @@
     
     <footer>
         <div class="container">
-            <p>جميع الحقوق محفوظة &copy; 2025 - منيرة العيسى</p>
+          <p> &copy; جميع الحقوق محفوظة  2025  منيرة العيسى  </p>
         </div>
     </footer>
     <div class="lesson-navigation">
