--- a/lesson9.html
+++ b/lesson9.html
@@ -442,7 +442,7 @@
             </section>
               <div class="nav-buttons">
                 <a href="lesson8.html" class="btn">الدرس السابق: العقلية الريادية</a>
-                <a href="lesson1.html" class="btn">الدرس التالي: التحقق من السوق</a>
+                <a href="lesson10.html" class="btn">الدرس التالي: الابتكار والتكيف مع التغيير</a>
             </div>
         </div>
     </main>
