--- a/lesson10.html
+++ b/lesson10.html
@@ -470,13 +470,15 @@
                     </div>
                 </div>
             </section>
+             <div class="nav-buttons">
+                <a href="lesson9.html" class="btn">الدرس السابق :اكتساب العملاء والتسويق</a>
+            </div>
         </div>
     </main>
     
     <footer>
         <div class="container">
             <p> &copy; جميع الحقوق محفوظة  2025 منيرة العيسى  </p>
-            <a href="index.html" class="btn">العودة إلى الصفحة الرئيسية</a>
         </div>
     </footer>
 </body>
