--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="logo">
                 <img src="images/logo.svg" alt="شعار منهج ريادة الأعمال">
-                منهج ريادة الأعمال
+               رواد أعمال الشركات التقنية الناشئة
             </div>
             <nav>
                 <ul>
@@ -27,7 +27,7 @@
     <section class="hero">
         <div class="container">
             <h1>الركائز الأساسية لنجاح رواد الأعمال والشركات التقنية الناشئة</h1>
-            <p>منهج تدريسي متكامل لتزويد رواد الأعمال المبتدئين والمهتمين بإنشاء شركات تقنية ناشئة بالمعرفة والمهارات الأساسية اللازمة للنجاح</p>
+            <p>تعلّم كيف تبني شركتك التقنية الناشئة خطوة بخطوة من خلال منهج تدريسي متكامل مصمم خصيصًا لرواد الأعمال الطموحين </p>
             <a href="#lessons" class="btn">استعرض الحصص التدريسية</a>
         </div>
     </section>
