--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="hero">
         <div class="container">
             <h1>الركائز الأساسية لنجاح رواد الأعمال والشركات التقنية الناشئة</h1>
-            <p>تعلّم كيف تبني شركتك التقنية الناشئة خطوة بخطوة من خلال منهج تدريسي متكامل مصمم خصيصًا لرواد الأعمال الطموحين </p>
+            <p>تعلّم كيف تبني شركتك التقنية الناشئة خطوة بخطوة من خلال منهج متكامل مصمم خصيصًا لرواد الأعمال الطموحين </p>
             <a href="#lessons" class="btn">استعرض الحصص التدريسية</a>
         </div>
     </section>
