--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
     </header>
     
     <section class="hero">
+    
+    <video autoplay loop muted playsinline class="hero-video">
+        <source src="entrepreneurship.mp4" type="video/mp4">
+        <!-- (اختياري) إضافة تنسيقات أخرى للتوافق مع المتصفحات -->
+        <source src="entrepreneurship.mp4" type="video/mp4">
+    </video>
         <div class="container">
             <h1>الركائز الأساسية لنجاح رواد الأعمال والشركات التقنية الناشئة</h1>
             <p>تعلّم كيف تبني شركتك التقنية الناشئة خطوة بخطوة من خلال منهج متكامل مصمم خصيصًا لرواد الأعمال الطموحين </p>
