--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
     </header>
     
     <section class="hero">
-    
-    <video autoplay loop muted playsinline class="hero-video">
+    <video autoplay loop muted playsinline class="hero-video" poster="v.jpg">
         <source src="entrepreneurship.mp4" type="video/mp4">
         <!-- (اختياري) إضافة تنسيقات أخرى للتوافق مع المتصفحات -->
         <source src="entrepreneurship.mp4" type="video/mp4">
