--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </header>
     
     <section class="hero">
-    <video autoplay loop muted playsinline class="hero-video" poster="v.jpg"   width="800" height="450">
-        <source src="entrepreneurship.mp4" type="video/mp4">
+    <video autoplay loop muted playsinline class="hero-video" poster="v.jpg">
+        <source src="entrepreneurship.mp4" type="video/mp4"   width="800"  height="450">
         </video>
          <div class="container">
             <h1>الركائز الأساسية لنجاح رواد الأعمال والشركات التقنية الناشئة</h1>
