--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     
     <section class="hero">
     <video autoplay loop muted playsinline class="hero-video" poster="v.jpg">
-        <source src="entrepreneurship.mp4" type="video/mp4"   width="800"  height="450">
+        <source src="entrepreneurship.mp4" type="video/mp4" >
         </video>
          <div class="container">
             <h1>الركائز الأساسية لنجاح رواد الأعمال والشركات التقنية الناشئة</h1>
