--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@
     
     <footer>
         <div class="container">
-            <p> &copy; جميع الحقوق محفوظة  2025  منيرة العيسى  </p>
+            <p> جميع الحقوق محفوظة لمنيرة العيسى  &copy;2025 </p>
         </div>
     </footer>
 </body>
