--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@
     
     <footer>
         <div class="container">
-            <p>&copy; 2025 جميع الحقوق محفوظة لمنيرة العيسى </p>
+            <p> 2025 &copy; جميع الحقوق محفوظة لمنيرة العيسى </p>
         </div>
     </footer>
 </body>
