--- a/lesson10.html
+++ b/lesson10.html
@@ -478,7 +478,7 @@
     
     <footer>
         <div class="container">
-            <p> &copy; جميع الحقوق محفوظة  2025 منيرة العيسى  </p>
+               <p> 2025 &copy; جميع الحقوق محفوظة لمنيرة العيسى </p>
         </div>
     </footer>
 </body>
