--- a/assessment_tests/financial_readiness.html
+++ b/assessment_tests/financial_readiness.html
@@ -299,13 +299,14 @@
                     </ul>
                 </div>
             </section>
+              <a href="../index.html" class="btn">العودة إلى الصفحة الرئيسية</a>
         </div>
     </main>
     
     <footer>
         <div class="container">
-            <p>جميع الحقوق محفوظة &copy; 2025 - منيرة العيسى</p>
-            <a href="../index.html" class="btn">العودة إلى الصفحة الرئيسية</a>
+              <p> 2025 &copy; جميع الحقوق محفوظة لمنيرة العيسى </p>
+          
         </div>
     </footer>
 
