--- a/assessment_tests/financial_readiness.html
+++ b/assessment_tests/financial_readiness.html
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="logo">
                 <img src="../images/logo.svg" alt="شعار منهج ريادة الأعمال">
-                منهج ريادة الأعمال
+                  رواد أعمال الشركات التقنية الناشئة
             </div>
             <nav>
                 <ul>
